tests/src/frontend/syntax/invalid/lambda_inconsistent_param_types_1.sk
fun main(): String {
  l = (p1, p2: String) -> p2;
  l(42, "Fail")
}
